hacker news with hooks

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,3 +24,17 @@
   display: flex;
   overflow: hidden;
 }
+
+//
+// .card-actual {
+//   width: 15rem;
+//   height: 15rem;
+//   background-color:#e6e6e6;
+//   overflow: hidden;
+// }
+//
+// .card-expand {
+//   width: 30.5rem;
+//   height: 30.5rem;
+//   background-color:#ffe6cc;
+// }
